# llm-bi-chat-langgraph

./: .gitignore  Dockerfile  README.md  diagrams.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
scripts/: prepare_bi_data.py
src/: app.py  config.py
src/agents/: __init__.py  base.py  chart_agent.py  orchestrator.py  query_agent.py  registry.py  visualization_agent.py
src/services/: dashboard_renderer.py  mcp_connection.py  schema_pruner.py
src/sql/: duckdb_mcp_server.py
